set for google login and add the logo as well

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,4 @@
 VITE_SERVER_URL=http://localhost:8000/api/v1
 VITE_WEBSOCKET_URL=ws://localhost:8000/ws/chat
+
+VITE_GOOGLE_AUTH_KEY=404847566177-rv6ra71mgtptbk729jakc18503mvtne7.apps.googleusercontent.com
