--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "dotenv": "^16.4.7",
