--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.23.12",
     "hls.js": "^1.6.7",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
